--- a/examples/uicopilot/pyproject.toml
+++ b/examples/uicopilot/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "google-genai>=1.11.0",
     "opencv-python>=4.11.0.86",
     "pillow>=11.2.1",
+    "sentencepiece>=0.2.0",
     "torch>=2.7.0",
     "transformers>=4.51.3",
 ]
